WebCore:

2008-07-25  Jacob Refstrup  <jacob.refstrup@hp.com>

        Reviewed by mitz.

        - fix https://bugs.webkit.org/show_bug.cgi?id=17906
        <rdar://problem/5805741> white-space: pre-wrap or -webkit-line-break: after-white-space text can overlap float at end of line

        Test: fast/block/float/editable-text-overlapping-float.html

        * rendering/RenderBlock.h:
        * rendering/bidi.cpp:
        (WebCore::RenderBlock::skipTrailingWhitespace):
        - renamed to reflect usage and removed call to position floats;
          they only get added
        (WebCore::RenderBlock::skipLeadingWhitespace):
        - renamed to reflect usage
        (WebCore::RenderBlock::findNextLineBreak):
        - use skipTrailingWhitespace at end of line (as before but with new
          name)

LayoutTests:

2008-07-25  Jacob Refstrup  <jacob.refstrup@hp.com>

        Reviewed by mitz.

        - added test case for float being added in trailing whitespace
          of an already full line (with pre-wrap or after-white-space set).
          <rdar://problem/5805741> https://bugs.webkit.org/show_bug.cgi?id=17906

        * fast/block/float/editable-text-overlapping-float.html: Added.
        * platform/mac/fast/block/float/editable-text-overlapping-float-expected.checksum: Added.
        * platform/mac/fast/block/float/editable-text-overlapping-float-expected.png: Added.
        * platform/mac/fast/block/float/editable-text-overlapping-float-expected.txt: Added.
        * platform/qt/fast/block/float/editable-text-overlapping-float-expected.txt: Added.



Canonical link: https://commits.webkit.org/27781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35354 268f45cc-cd09-0410-ab3c-d52691b4dbfc